--- a/index.html
+++ b/index.html
@@ -146,7 +146,20 @@ $(document).ready(function () {
 <div id="TOC">
 <ul>
 <li><a href="#about-the-project">About the project</a></li>
-<li><a href="#insert-chapter-2-title-here">Insert chapter 2 title here</a></li>
+<li><a href="#chapter-2---working-with-data-regression-analysis">Chapter 2 - working with data / regression analysis</a></li>
+<li><a href="#suvi-kivi-11.11.2018.-this-file-shows-what-i-have-learned-this-week">Suvi Kivi 11.11.2018. This file shows what I have learned this week!</a></li>
+<li><a href="#data-wrangling">DATA WRANGLING</a><ul>
+<li><a href="#taking-dataset-in-dimension-and-structure-of-the-data">2. Taking dataset in &amp; dimension and structure of the data</a></li>
+<li><a href="#analysis-dataset">3. Analysis dataset</a></li>
+<li><a href="#setting-the-working-directory-and-writingreading-csv-files">4. Setting the working directory and writing/reading csv-files</a></li>
+</ul></li>
+<li><a href="#analysis">ANALYSIS</a><ul>
+<li><a href="#looking-at-learning-2014-dataset">1. Looking at learning 2014 dataset</a></li>
+<li><a href="#graphical-overview-of-the-data">2. graphical overview of the data</a></li>
+<li><a href="#choosing-three-explanatory-variables---regression-analysis-between-attitude-and-points">3. Choosing three explanatory variables -&gt; regression analysis between attitude and points</a></li>
+<li><a href="#summary-of-the-models-simple-and-multiple-models">4. Summary of the models (simple and multiple models)</a></li>
+<li><a href="#plots">5. Plots</a></li>
+</ul></li>
 </ul>
 </div>
 
@@ -158,15 +171,151 @@ $(document).ready(function () {
 </ul>
 <hr />
 </div>
-<div id="insert-chapter-2-title-here" class="section level1">
-<h1>Insert chapter 2 title here</h1>
-<p><em>Describe the work you have done this week and summarize your learning.</em></p>
+<div id="chapter-2---working-with-data-regression-analysis" class="section level1">
+<h1>Chapter 2 - working with data / regression analysis</h1>
+<p><em>I learned to do new things with R!</em></p>
 <ul>
-<li>Describe your work and results clearly.</li>
-<li>Assume the reader has an introductory course level understanding of writing and reading R code as well as statistical methods</li>
-<li>Assume the reader has no previous knowledge of your data or the more advanced methods you are using</li>
+<li>I learned what graphical things it is possible to do with R, I haven’t tried this before.</li>
+<li>I also learned how to do regression analysis in R. Also a new thing for me!</li>
+</ul>
+</div>
+<div id="suvi-kivi-11.11.2018.-this-file-shows-what-i-have-learned-this-week" class="section level1">
+<h1>Suvi Kivi 11.11.2018. This file shows what I have learned this week!</h1>
+</div>
+<div id="data-wrangling" class="section level1">
+<h1>DATA WRANGLING</h1>
+<div id="taking-dataset-in-dimension-and-structure-of-the-data" class="section level2">
+<h2>2. Taking dataset in &amp; dimension and structure of the data</h2>
+<p><em>Taking dataset in</em></p>
+<p>lrn2014 &lt;- read.table(“<a href="http://www.helsinki.fi/~kvehkala/JYTmooc/JYTOPKYS3-data.txt" class="uri">http://www.helsinki.fi/~kvehkala/JYTmooc/JYTOPKYS3-data.txt</a>”, sep=“”, header=TRUE)</p>
+<p><em>Dimension of the data</em></p>
+<p>dim (lrn2014)</p>
+<ul>
+<li>there is 183 obs and 60 variables in the dataset</li>
+</ul>
+<p><em>Structure of the data</em></p>
+<p>str(lrn2014)</p>
+<ul>
+<li>there are 59 integer variables and only one factor variable (gender)</li>
+</ul>
+</div>
+<div id="analysis-dataset" class="section level2">
+<h2>3. Analysis dataset</h2>
+<p><em>Access the dplyr library</em></p>
+<p>install.packages(“dplyr”)</p>
+<p>library(dplyr)</p>
+<p><em>Questions related to deep, surface and strategic learning</em></p>
+<p>deep_questions &lt;- c(“D03”, “D11”, “D19”, “D27”, “D07”, “D14”, “D22”, “D30”,“D06”, “D15”, “D23”, “D31”)</p>
+<p>surface_questions &lt;- c(“SU02”,“SU10”,“SU18”,“SU26”, “SU05”,“SU13”,“SU21”,“SU29”,“SU08”,“SU16”,“SU24”,“SU32”)</p>
+<p>strategic_questions &lt;- c(“ST01”,“ST09”,“ST17”,“ST25”,“ST04”,“ST12”,“ST20”,“ST28”)</p>
+<p><em>Selecting columns related to deep learning and creating a new column ‘deep’ by averaging</em></p>
+<p>deep_columns &lt;- select(lrn2014, one_of(deep_questions))</p>
+<p>lrn2014$deep &lt;- rowMeans(deep_columns)</p>
+<p><em>Selecting columns related to surface learning and creating column ‘surf’ by averaging</em></p>
+<p>surface_columns &lt;- select(lrn2014, one_of(surface_questions))</p>
+<p>lrn2014$surf &lt;- rowMeans(surface_columns)</p>
+<p><em>Selecting columns related to strategic learning and creating column ‘stra’ by averaging</em></p>
+<p>strategic_columns &lt;- select(lrn2014, one_of(strategic_questions))</p>
+<p>lrn2014$stra &lt;- rowMeans(strategic_columns)</p>
+<p><em>Choosing the right columns to keep</em></p>
+<p>keep_columns &lt;- c(“gender”,“Age”,“Attitude”, “deep”, “stra”, “surf”, “Points”)</p>
+<p><em>Selecting the ‘keep_columns’ to create a new dataset</em></p>
+<p>learning2014 &lt;- select(lrn2014, one_of(keep_columns))</p>
+<p><em>Select rows where points is greater than zero</em></p>
+<p>learning2014 &lt;- filter(learning2014, Points &gt; 0)</p>
+<ul>
+<li>now there are 166 obs. and 7 variables in the dataset</li>
+</ul>
+</div>
+<div id="setting-the-working-directory-and-writingreading-csv-files" class="section level2">
+<h2>4. Setting the working directory and writing/reading csv-files</h2>
+<p><em>Setting the working directory</em></p>
+<p>setwd(“/Users/suvi/Documents/GitHub/IODS-project”)</p>
+<p><em>Write csv</em></p>
+<p>?write.csv</p>
+<p>write.csv(learning2014, “/Users/suvi/Documents/GitHub/IODS-project/Data/learning2014.csv”)</p>
+<p><em>Read csv</em></p>
+<p>?read.csv</p>
+<p>read.csv(“/Users/suvi/Documents/GitHub/IODS-project/Data/learning2014.csv”)</p>
+<p><em>Structure of the csv</em></p>
+<p>str(“/Users/suvi/Documents/GitHub/IODS-project/Data/learning2014.csv”)</p>
+<p>head(“/Users/suvi/Documents/GitHub/IODS-project/Data/learning2014.csv”)</p>
+</div>
+</div>
+<div id="analysis" class="section level1">
+<h1>ANALYSIS</h1>
+<div id="looking-at-learning-2014-dataset" class="section level2">
+<h2>1. Looking at learning 2014 dataset</h2>
+<p>Data is already in after data wrangling and that is why I don’t read it from the web.</p>
+<p>dim(learning2014)</p>
+<p>str (learning2014)</p>
+<ul>
+<li>Learning2014 dataset shows information about student, their attitudes and how they perform in tests.</li>
+<li>There are information about 166 students in the data and the variables are gender, age, attitude, deep, stra, surf and points.</li>
+<li>Gender and age are basic information about the student. Attitude shows students’ attitude towards statistics (many questions in the backround).</li>
+<li>Variables deep, stra and surf are collected together from different questions and the data shows the average of the Likert-scale (1-5).</li>
+<li>Variable points shows the students’ exam points.</li>
+</ul>
+</div>
+<div id="graphical-overview-of-the-data" class="section level2">
+<h2>2. graphical overview of the data</h2>
+<p><em>Graphical overwiev helps to understand the data. If we want to see the summaries of the variables, histogram is one way to see that.</em></p>
+<p>hist_age &lt;- hist(learning2014$Age)</p>
+<p>hist_attitude &lt;- hist(learning2014$Attitude)</p>
+<ul>
+<li>In learning2014 data most of the students are 20-15 years old.</li>
+<li>The most common attitude points are 30-35.</li>
+</ul>
+<p><em>Plots are also a good way to explore the data. For example we can see the points and the attitude in the same plot</em></p>
+<p>install.packages(“ggplot2”)</p>
+<p>library(ggplot2)</p>
+<p>plot1 &lt;- ggplot(learning2014, aes(x = Attitude, y = Points))</p>
+<p>plot2 &lt;- plot1 + geom_point()</p>
+<p>plot2</p>
+<p>plot3 &lt;- plot2 + geom_smooth(method = “lm”)</p>
+<p>plot3</p>
+<ul>
+<li>It seems that if the students attitude is higher the points are little bit higher too (we will test this later)</li>
+</ul>
+<p><em>Also a good way to see data by all the variables, is to use pairs (pairs or for example ggpairs)</em></p>
+<p>pairs(learning2014[-1])</p>
+<p>install.packages(“GGally”)</p>
+<p>library(GGally)</p>
+<p>p &lt;- ggpairs(learning2014, mapping = aes(), lower = list(combo = wrap(“facethist”, bins = 20)))</p>
+<p>p</p>
+</div>
+<div id="choosing-three-explanatory-variables---regression-analysis-between-attitude-and-points" class="section level2">
+<h2>3. Choosing three explanatory variables -&gt; regression analysis between attitude and points</h2>
+<p><em>Simple regression analysis: attitude and points</em></p>
+<p>keep_columns &lt;- c(“Age”, “Attitude”, “deep”, “Points”)</p>
+<p>variables &lt;- select(learning2014, one_of(keep_columns))</p>
+<p>qplot(Attitude, Points, data = variables) + geom_smooth(method = “lm”)</p>
+<p>linear_model &lt;- lm(Points ~ Attitude, data = variables)</p>
+</div>
+<div id="summary-of-the-models-simple-and-multiple-models" class="section level2">
+<h2>4. Summary of the models (simple and multiple models)</h2>
+<p><em>Summary (linear_model)</em></p>
+<ul>
+<li>There is statistical relationship between points and attitude because P-value is smaller than 0,05 (4.119e-09)</li>
+<li>This means that if the attitude of the student is high, the student will more likely to have good points in test.</li>
+</ul>
+<p><em>Multiple regression analysis</em></p>
+<p>linear_model2 &lt;- lm(Points ~ Attitude + Age + deep, data = variables)</p>
+<p>summary(linear_model2)</p>
+<ul>
+<li>There is statistical relationship between points and attitude but not with points and age/deep because of the p-values.</li>
+<li>This means that the age for example does not affect so much to test points, it is the attitude what matters the most.</li>
+</ul>
+</div>
+<div id="plots" class="section level2">
+<h2>5. Plots</h2>
+<p>plot(linear_model)</p>
+<p>plot(linar_model2)</p>
+<ul>
+<li>You can see the residuals in the plots</li>
 </ul>
 <hr />
+</div>
 </div>
 
 
